# robocon26-ros2-slam-nav

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: clean_waffle.urdf  nav2_params.yaml
launch/: simulation.launch.py
maps/: robocon_map.pgm  robocon_map.yaml
scripts/: fix_robot.sh
world/: Game_Field_Robocon_2026_v13.glb  robocon.world  robocon_arena.stl
